--- a/new_pro/templates/index.html
+++ b/new_pro/templates/index.html
@@ -28,7 +28,7 @@
     <div class="container">
         <!-- 导航栏商标 -->
         <div>
-            <a class="navbar-brand" href="./index.html">个人博客</a>
+            <a class="navbar-brand" href="http://127.0.0.1:8000">个人博客</a>
         </div>
         <!-- 分类 -->
         <div class="collapse navbar-collapse">
@@ -64,7 +64,7 @@
                 </li>
                 <!-- 如果用户未登录，则显示登录按钮 -->
                 <li class="nav-item" v-else>
-                    <a class="nav-link" href="../static/login.html">登录</a>
+                    <a class="nav-link" href="login.html">登录</a>
                 </li>
             </ul>
         </div>
