--- a/new_pro/templates/index.html
+++ b/new_pro/templates/index.html
@@ -55,7 +55,7 @@
             <ul class="nav navbar-nav">
                 <!-- 如果用户已经登录，则显示用户名下拉框 -->
                 <li class="nav-item dropdown" v-if="is_login">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" @click="show_menu_click">admin</a>
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" @click="show_menu_click">[[username]]</a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown" style="display: block" v-show="show_menu">
                         <a class="dropdown-item" href="../static/write_blog.html">写文章</a>
                         <a class="dropdown-item" href='../static/center.html'>个人信息</a>
