--- a/new_pro/templates/register.html
+++ b/new_pro/templates/register.html
@@ -30,7 +30,7 @@
     <div class="navbar-collapse">
         <ul class="nav navbar-nav">
             <li class="nav-item">
-                <a class="nav-link" href="login.html">登录</a>
+                <a class="nav-link" href="http://127.0.0.1:8000/login">登录</a>
             </li>
         </ul>
     </div>
