虚空索了一天的bug，麻了，完成了文章的页面展示

--- a/new_pro/templates/index.html
+++ b/new_pro/templates/index.html
@@ -89,7 +89,7 @@
                 </span>
                 <!-- 标题 -->
                 <h4>
-                    <b><a href="../static/detail.html" style="color: black;">{{ article.title }}</a></b>
+                    <b><a href="{% url 'home:detail' %}?id={{ article.id }}" style="color: black;">{{ article.title }}</a></b>
                 </h4>
                 <!-- 摘要 -->
                 <div>
