--- a/new_pro/templates/detail.html
+++ b/new_pro/templates/detail.html
@@ -78,7 +78,7 @@
         <div class="col-9">
             <!-- 标题及作者 -->
             <h1 class="mt-4 mb-4">{{ article.title }}</h1>
-            <div class="alert alert-success"><div>作者：<span>{{ article.author.username }}</span></div><div>浏览：{{ article.total_views }}</div></div>
+            <div class="alert alert-success"><div>作者：<span>{{ article.auth.username }}</span></div><div>浏览：{{ article.total_views }}</div></div>
             <!-- 文章正文 -->
             <div class="col-12" style="word-break: break-all;word-wrap: break-word;">
                 <p><p>{{ article.content|safe }}</p></p>
@@ -91,8 +91,10 @@
             </h5>
             <br>
             <div>
-                {% csrf_token %}
+
                 <form method="POST">
+                    {% csrf_token %}
+                    <input type="hidden" name="id" value="{{ article.id }}">
                 <div class="form-group"><label for="body"><strong>我也要发言：</strong></label>
                     <div>
 
@@ -109,48 +111,18 @@
             </div>
             <br>
             <!-- 显示评论 -->
-            <h4>共有5条评论</h4>
+            <h4>共有{{ total_count }}条评论</h4>
             <div class="row">
+                {% for comment in comments %}
                 <div class="col-12" >
                             <hr><p><strong style="color: pink"></strong></p>
                             <div>
-                                <div><span><strong>老王</strong></span>&nbsp;<span style="color: gray">2019-05-18 14:54</span></div>
+                                <div><span><strong>{{ comment.user.username }}</strong></span>&nbsp;<span style="color: gray">{{ comment.created|date:'Y-m-d H:i'}}</span></div>
                                 <br>
-                                <p>学习了</p>
+                                <p>{{ comment.content|safe }}</p>
                             </div>
                 </div>
-                <div class="col-12">
-                    <hr><p><strong style="color: pink"></strong></p>
-                    <div>
-                        <div><span><strong>老王</strong></span>&nbsp;<span style="color: gray">2019-05-18 14:54</span></div>
-                        <br>
-                        <p>学习了</p>
-                    </div>
-                </div>
-                <div class="col-12">
-                    <hr><p><strong style="color: pink"></strong></p>
-                    <div>
-                        <div><span><strong>老王</strong></span>&nbsp;<span style="color: gray">2019-05-18 14:54</span></div>
-                        <br>
-                        <p>学习了</p>
-                    </div>
-                </div>
-                <div class="col-12">
-                    <hr><p><strong style="color: pink"></strong></p>
-                    <div>
-                        <div><span><strong>老王</strong></span>&nbsp;<span style="color: gray">2019-05-18 14:54</span></div>
-                        <br>
-                        <p>学习了</p>
-                    </div>
-                </div>
-                <div class="col-12">
-                    <hr><p><strong style="color: pink"></strong></p>
-                    <div>
-                        <div><span><strong>老王</strong></span>&nbsp;<span style="color: gray">2019-05-18 14:54</span></div>
-                        <br>
-                        <p>学习了</p>
-                    </div>
-                </div>
+                {% endfor %}
                 <div class="pagenation" style="text-align: center">
                     <div id="pagination" class="page"></div>
                 </div>
@@ -162,11 +134,9 @@
             <div class="sidebar__inner">
                     <h4><strong>推荐</strong></h4>
                     <hr>
-                    <a href="#" style="color: black">如何更好的学习Django呢？</a><br>
-                    <a href="#" style="color: black">如何更好的学习Django呢？</a><br>
-                    <a href="#" style="color: black">如何更好的学习Django呢？</a><br>
-                    <a href="#" style="color: black">如何更好的学习Django呢？</a><br>
-                    <a href="#" style="color: black">如何更好的学习Django呢？</a><br>
+                    {% for hot_article in hot_articles %}
+                        <a href="{% url 'home:detail' %}?id={{ hot_article.id }}" style="color: black">{{ hot_article.title }}</a><br>
+                    {% endfor %}
             </div>
         </div>
     </div>
@@ -192,11 +162,10 @@
 <script type="text/javascript">
     $(function () {
         $('#pagination').pagination({
-            currentPage: 15,
-            totalPage: 30,
+            currentPage: {{ page_num }},
+            totalPage: {{ total_page }},
             callback:function (current) {
-
-                location.href = '/';
+                location.href = '/detail/?id={{ article.id }}&page_size={{ page_size }}&page_num='+current;
             }
         })
     });
